# aoo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
spec/: 00-introduction.md  01-lexical-structure.md
src/: currentFile.hpp  main.cpp  meta.hpp
src/AST/: base.hpp  generics.hpp  identifiers.hpp
src/boot/: Arguments.hpp  parseArguments.hpp
src/debug/: dump.hpp  lexerTokens.hpp
src/lexer/: Lexer.hpp  charLiteral.hpp  identifier.hpp  numberLiteral.hpp  stringLiteral.hpp  tokens.hpp  utils.hpp
src/llvm-patch/llvm/IR/: CFG.h
src/manul/: splashes.hpp
src/parser/: ASTNodes.hpp  Declarations.hpp  Errors.hpp  Expressions.hpp  IdentifierTable.hpp  Parser.hpp  Speculation.hpp  State.hpp  Statements.hpp  _old_IdentifierTable.hpp
src/util/: BitField.hpp  cmp.hpp  concepts.hpp  escape.hpp  filesystem.hpp  platform.hpp  string.hpp
tests/: apostrophe.aoo  comments.aoo  helloworld.aoo  id_kw_op.aoo  literals.ao  module.aoo  numberLiterals.aoo  quotes.aoo  type.ao
tests/examples/: helloworld.aoo  shared_ptr.aoo
tests/lexer/: apostrophe.aoo  comments.aoo  helloworld.aoo  id_kw_op.aoo  numberLiterals.aoo  quotes.aoo
tests/parser/: module.aoo  not_a_module.aoo
